tests/harness/errors/106_io_check_fail.eu
` { target: :main requires-io: true }
main: io.bind("false" io.shell, io.check)
